--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -7,19 +7,26 @@
 }
 
 .column:first-child {
-  width: calc(100% - 370px);
+  width: calc(100% - 400px);
   display: block;
 }
 
 .column:last-child {
   width: 100%;
-  max-width: 350px;
+  max-width: 380px;
   display: block;
 }
 .cart-title {
   font-size: 44px;
   font-weight: 600;
   margin-bottom: 20px;
+}
+
+.cart-title span {
+  color: #111;
+  font-size: 50px;
+  font-weight: 500;
+  margin-top: -5px;
 }
 .cart-list {
   width: 100%;
@@ -33,7 +40,7 @@
 
 .cart-price {
   width: 100%;
-  max-width: 350px;
+  max-width: 380px;
   padding: 16px;
   border-radius: 12px;
   border: 1px solid #e8e8e8;
@@ -43,6 +50,8 @@
   width: 100%;
   font-size: 30px;
   font-weight: 700;
+  font-family: sans-serif;
+  letter-spacing: 1px;
   border-bottom: 1px solid #e8e8e8;
   padding-bottom: 10px;
   margin-bottom: 15px;
@@ -82,7 +91,140 @@
   margin-right: -10px;
   background-color: #da002b;
   transition: all 0.3s ease;
-  border-top-right-radius: 12px;
-  border-bottom-right-radius: 12px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  cursor: pointer;
+}
 
+.cart-price__input button:hover {
+  background-color: #da002c8b;
+}
+
+.cart-price__des {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  margin: 15px 0 ;
+}
+
+.cart-price__des  b {
+  width: 45%;
+  color: #111;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: start;
+  line-height: 20px;
+  letter-spacing: 1px;
+}
+
+.cart-price__des p {
+  width: 45%;
+  color: #111;
+  text-align: end;
+  font-size: 18px;
+  text-align: end;
+  font-family: sans-serif;
+  line-height: 18px;
+}
+
+
+.cart-price__des span {
+  font-size: 16px;
+  color: #da002b;
+  text-align: start;
+  font-weight: 500;
+
+}
+
+
+.order-btn {
+  width: 100%;
+  min-height: 56px;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: 1px;
+  background-color: #da002b;
+  border: 2px solid #da002b;
+  cursor: pointer;
+  border-radius: 12px;
+  transition: all 0.3s ease;
+}
+
+.order-btn:hover {
+  color: #da002b;
+  font-weight: 500;
+  background-color: #fff;
+  border: 2px solid #da002b;
+}
+
+.cart-price__bottom-offer {
+  color: #999;
+  font-size: 16px;
+  margin-top: 15px; 
+
+}
+
+.cart-price__bottom-offer span {
+  color: blue;
+  cursor: pointer;
+}
+
+.cart-price__label {
+  width: 100%;
+  max-width: 380px;
+  padding: 16px;
+  border-radius: 12px;
+  border: 1px solid #e8e8e8;
+  margin-top: 20px;
+}
+
+.cart-price__label h2 {
+  margin-bottom: 15px;
+}
+ 
+
+.cart-empty {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.cart-empty svg {
+  color: #111;
+  font-size: 40px;
+}
+
+.cart-empty h2 {
+  color: #111;
+  font-size: 44px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.cart-empty p {
+  color: #111;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.cart-empty a button {
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  padding:  15px;
+  letter-spacing: 1px;
+  border-radius: 8px;
+  border: 2px solid #da002b;
+  background-color: #da002b;
+  transition: all 0.3s ease;
+}
+
+.cart-empty a button:hover {
+  color: #da002b;
+  border: 2px solid #da002b;
+  background-color: #fff;
+  outline: none;
 }
