--- a/src/Components/ProductofTheDay/ProductOfTheDay.css
+++ b/src/Components/ProductofTheDay/ProductOfTheDay.css
@@ -27,21 +27,19 @@
 }
 
 
-.product-name {
+.product-container .product-name {
   font-size: 16px;
   font-weight: 600;
 }
 
 
-.product-price {
+.product-container .product-price {
   display: flex;
   align-items: center;
   gap: 20px;
-  margin-top: 30px;
   margin-bottom: 20px;
 }
-
- .product-new__price {
+.product-container .product-new__price {
   color: #DA002B;
   font-size: 20px;
   font-weight: 700;
