--- a/src/Components/ProductFavoritCard/ProductCard.css
+++ b/src/Components/ProductFavoritCard/ProductCard.css
@@ -2,12 +2,15 @@
   width: 254px;
   height: auto;
   position: relative;
-  box-shadow: 0px 0px 5px 1px rgba(8, 40, 105, 0.2);
+  box-shadow: 0px 5px 10px 2px rgba(8, 40, 105, 0.2);
   border-radius: 12px;
   cursor: pointer;
   margin-top: 15px;
   margin-bottom: 15px;
-  padding-bottom: 15px;
+}
+
+.favorite-items .product-card {
+  box-shadow: 0px 0px 5px 1px rgba(8, 40, 105, 0.2);;
 }
 
 .product-card__action {
@@ -19,13 +22,9 @@
   top: 10px;
 }
 
-.product-card__action .black svg {
+.product-card__action svg {
   font-size: 25px;
   color: #999;
-}
-.product-card__action .red svg {
-  font-size: 25px;
-  color: #da002b;
 }
 
 .product-card__img {
