--- a/src/UI/button/CompereBtn/CompereBtn.css
+++ b/src/UI/button/CompereBtn/CompereBtn.css
@@ -6,7 +6,10 @@
   background-color: #fff;
   border: none;
   cursor: pointer;
-  box-shadow: 0px 5px 10px 2px rgba(8, 40, 105, 0.2);
+}
+
+.compere-btn__container:hover svg {
+  transform: scale(1.4);
 }
 
 .compere-btn__container svg {
