--- a/src/UI/button/ToCartBtn2/ToCartBtn.css
+++ b/src/UI/button/ToCartBtn2/ToCartBtn.css
@@ -27,6 +27,10 @@
   cursor: default;
 }
 
+.product-details__price .to-cart__container.to-cart__btn2 {
+  width: 150px;
+}
+
 .to-cart__container.to-cart__btn2  p {
   color: #111;
   font-size: 20px;
